--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,32 +15,38 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
-    "@tanstack/react-query": "^5.59.16",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-query": "^5.59.16",
     "class-variance-authority": "^0.7.0",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "dom-helpers": "^6.0.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.5",
     "openai": "^6.6.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-joyride": "^2.9.3",
     "recharts": "^2.12.6",
     "swr": "^2.2.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.46",
