Add Alembic baseline and safe stamp-if-missing on startup

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -2,6 +2,7 @@
 script_location = alembic
 sqlalchemy.url = sqlite:///app.db
 #sqlalchemy.url = postgresql+psycopg2://postgres:postgres@db:5432/marketingkreis
+version_locations = alembic/versions_current
 
 [loggers]
 keys = root,sqlalchemy,alembic
