Add production health/metrics and smoke checks
- Add /healthz + /readyz and token-gated /metrics for production monitoring
- Improve request logging with request IDs and structured JSON events
- Add backend production smoke script + report; harden Playwright e2e setup

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ frontend/.env.local
 frontend/.next/
 frontend/out/
 frontend/.vercel/
+frontend/test-results/
+frontend/playwright-report/
+frontend/e2e-auth.json
+frontend/e2e-run.json
 
 #
 # Local runtime logs and PIDs
