--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,20 @@ on:
     branches: [ main ]
 
 jobs:
+  secrets-hygiene:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Secrets / env hygiene
+        run: |
+          python scripts/check_secrets_hygiene.py
+
   backend:
     runs-on: ubuntu-latest
+    needs: [secrets-hygiene]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -33,6 +45,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
+    needs: [secrets-hygiene]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -53,6 +66,7 @@ jobs:
 
   e2e:
     runs-on: ubuntu-latest
+    needs: [secrets-hygiene]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -84,7 +98,7 @@ jobs:
 
   docker-build-and-scan:
     runs-on: ubuntu-latest
-    needs: [backend, frontend]
+    needs: [secrets-hygiene, backend, frontend]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
