--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,7 +25,10 @@ http {
         server_name _;
 
         location /api/ {
-            proxy_pass http://backend/;
+            # IMPORTANT:
+            # Route /api to the Next.js app so Next API routes like /api/reports/generate work.
+            # Next will proxy backend calls via BACKEND_URL where needed.
+            proxy_pass http://frontend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
