--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ SQLAlchemy>=2.0.0
 pydantic>=2.6.0
 pydantic-settings>=2.2.0
 python-jose[cryptography]>=3.3.0
+cryptography>=42.0.0
 httpx>=0.27.0
 psycopg2-binary>=2.9.0
 alembic>=1.13.0
@@ -15,4 +16,5 @@ rq>=1.15.0
 bcrypt>=4.1.2
 sentry-sdk[fastapi]>=2.19.0
 prometheus-client>=0.21.0
+pyotp>=2.9.0
 
