--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.441.0",
     "next": "^14.2.5",
     "openai": "^6.6.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -49,6 +50,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.12.7",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/semver": "^7.7.1",
