uploads feature updates

--- a/env.example
+++ b/env.example
@@ -43,6 +43,18 @@ SENTRY_ENV="development"
 NEXT_PUBLIC_SENTRY_ENV="development"
 RELEASE_VERSION="local"
 NEXT_PUBLIC_RELEASE_VERSION="local"
+SENTRY_TRACES_SAMPLE_RATE="0.05"
+
+# Metrics endpoint protection (backend /metrics)
+METRICS_TOKEN=""
+
+# Ops аварийность (email alerts on 5xx spikes; requires SMTP_* configured)
+OPS_ALERTS_ENABLED="false"
+OPS_ALERT_EMAILS="ops@example.com"
+# Optional tuning (seconds / count)
+OPS_ALERTS_WINDOW_SECONDS="300"
+OPS_ALERTS_5XX_THRESHOLD="10"
+OPS_ALERTS_COOLDOWN_SECONDS="900"
 
 # Logging Configuration
 LOG_LEVEL="info"
