--- a/frontend/env.example
+++ b/frontend/env.example
@@ -10,6 +10,8 @@ NEXTAUTH_SECRET="CHANGE_ME_DEV_ONLY"
 
 # When running in docker-compose, the frontend should talk to same-origin /api in production.
 # In local dev, Next.js rewrites proxy /api -> backend (see next.config.js).
+# IMPORTANT: must stay same-origin in production (cookies/CSRF).
+# Do NOT set an absolute backend URL here.
 NEXT_PUBLIC_API_URL="/api"
 
 # Optional: demo switches (avoid using in production)
