--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,10 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "next dev -p 3000 -H 0.0.0.0",
-    "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint",
+    "dev": "node node_modules/next/dist/bin/next dev -p 3000 -H 0.0.0.0",
+    "build": "node node_modules/next/dist/bin/next build",
+    "start": "node node_modules/next/dist/bin/next start -p 3000",
+    "lint": "node node_modules/next/dist/bin/next lint",
     "test": "jest --runInBand",
     "e2e": "playwright test"
   },
